# ENG_Rates-API

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  database.py  exchange_rates.db  exchange_rates.py  pyproject.toml  requirements.txt
.github/workflows/: script.yml
templates/: index.html
